--- a/index.html
+++ b/index.html
@@ -1,59 +1,31 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Dikey Çözümler - İple Erişim Hizmetleri</title>
-	<link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="/assets/css/app.css">
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
-</head>
-<body>
-	<nav class="navbar">
-		<div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Dikey Çözümler</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">homepage</a></li>
-            <li><a href="#about">aboutus</a></li>
-            <li><a href="#blog">blog</a></li>
-            <li><a href="#contact">contact</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">services <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-	</nav>
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-12">
-				x
-			</div>
-		</div>
-	</div>
+<html ng-app="dikeycozumler" >
+	<head>
+		<base href="/" />
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Dikey Çözümler - İple Erişim Hizmetleri</title>
+		<link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="/assets/css/app.css">
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+	</head>
+	<body ng-controller="bodyController">
+		<div class="content">
+	      <div class="content-body">
+	      	<div class="language-bar">
+	      		<div class="container text-right">
+	      			<a href="./">Türkçe</a> - <a href="./">English</a>
+	      		</div>
+	      	</div>
+	      	<div ng-include="'/views/header.html'"></div>
+	        <div class="content-ng" ng-view autoscroll="true"></div>
+	      </div>
+	      <div ng-include="'/views/footer.html'"></div>
+	     </div>
 
-<footer>
-	footer
-</footer>
-
-</body>
+	     <script src="/app/js/angular.min.js"></script>
+	     <script src="/app/js/angular-route.min.js"></script>
+	     <script src="/assets/js/app.js"></script>
+	</body>
 </html>
