--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Dikey Çözümler - İple Erişim Hizmetleri</title>
 		<link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="/assets/css/app.css">
+		<link rel="stylesheet" type="text/css" href="/assets/css/app.css?v20170312">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
 	</head>
 	<body ng-controller="bodyController">
@@ -26,6 +26,6 @@
 
 	     <script src="/app/js/angular.min.js"></script>
 	     <script src="/app/js/angular-route.min.js"></script>
-	     <script src="/assets/js/app.js"></script>
+	     <script src="/assets/js/app.js?v20170312"></script>
 	</body>
 </html>
